--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
 
 	<groupId>com.gtcc</groupId>
 	<artifactId>gtcc</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>gtcc</name>
-	<description> Sistema de gerenciamento de TCC</description>
+	<description>Projeto GTCC </description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.5.RELEASE</version>
+		<version>2.0.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -62,7 +62,6 @@
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
-			<version>3.0.4.RELEASE</version>
 		</dependency>
 
 		<dependency>
